Update PerformanceTests to use Stream.toList()